modules/noosphere/taghmata/nixidy/manifests/prod/seerr/Service-seerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr-service
  namespace: yarr
spec:
  selector:
    name: seerr
