modules/noosphere/taghmata/nixidy/manifests/prod/seerr/Service-seerr.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: yarr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5055
  selector:
    name: seerr
  type: ClusterIP
