modules/noosphere/taghmata/nixidy/manifests/prod/seerr/Ingress-seerr-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
    category: yarr
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Media Management
    glance/icon: di:jellyseerr
    glance/id: seerr
    glance/name: Seerr
    glance/parent: seerr
    glance/url: https://seerr.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: seerr-ip-root
  namespace: yarr
spec:
  ingressClassName: traefik
  rules:
    - host: seerr.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: seerr
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - seerr.noosphere.uk
      secretName: seerr-tls
